Reorganized the portfolio into a single page app. Added Projects section. Fixed some responsiveness issues. Fixed an issue of navbar blurring. Modifiedand improved completely the hero section.

--- a/static/partials/navbar.css
+++ b/static/partials/navbar.css
@@ -25,7 +25,7 @@ nav::after {
     opacity: 0;
     box-shadow: 0 .5rem 1rem -.25rem rgba(0, 0, 0, .3);
 
-    transition: background-color 200ms, backdrop-filter 200ms, opacity 200ms;
+    transition: background-color 200ms, opacity 200ms;
 
 }
 
